Add Spring Config Bus to project.